--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,12 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-.event": "^13.5.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
