--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-.event": "^13.5.0",
+    "@testing-library/user-event": "^13.5.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
@@ -18,10 +18,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm:start-react\" \"npm:start-flask\"",
+    "start-react": "react-scripts start",
+    "start-flask": "cd ../backend-flask && python3 app.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   },
   "eslintConfig": {
     "extends": [
